fix: open Control Panel Simple editor when PolicyParser is not exported
PolicyEditor links sun.security.provider. Constructing it in the Control
Panel JVM throws IllegalAccessError on JDK 17+ unless --add-exports is
present. Spawn policyeditor (or java -cp with the same modular flags)
when this process cannot see that package.